--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: effect_dart
 description: A powerful Effect library for Dart inspired by Effect-TS, providing functional programming patterns for managing side effects, errors, and dependencies.
 version: 0.1.0
-homepage: https://github.com/shtse8/effect.dart
+homepage: https://github.com/sylphxltd/effect
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
