--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,16 @@ firebase_options.dart
 
 # Analysis
 .dartServer
+
+# Node.js / npm (for documentation)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# VitePress
+docs/.vitepress/dist/
+docs/.vitepress/cache/
+.temp/
+.cache/
