--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+# package-lock.json - Keep this for CI/CD
 
 # VitePress
 docs/.vitepress/dist/
