fix: Use npm install for cross-platform compatibility

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,9 +20,7 @@ jobs:
         node-version: '18'
         
     - name: Install dependencies
-      run: |
-        # Install with force to ignore platform-specific dependencies
-        npm install --force --no-optional
+      run: npm install --prefer-offline --no-audit
       
     - name: Build documentation
       run: npm run docs:build
