--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,12 +19,17 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: 'docs/package-lock.json'
         
     - name: Install dependencies
-      run: npm ci
+      run: |
+        cd docs
+        npm ci
       
     - name: Build documentation
-      run: npm run docs:build
+      run: |
+        cd docs
+        npm run docs:build
       
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main'
